made a way to reconnect to a folder after it's been disconnected, other than
closing and reopening the entire store.

fixed a bug where deleted messages weren't be removed from the folder table
after reconnecting under disconnected imap.

fixed a bug in which, when switching from desktop mode to preview mode
with autopreview off, you could end up opening a new window with the enter 
key instead of just showing the message in the preview pane.

fixed a minor bug in which clearing a preview-pane mode message with a 
custom theme would result in the message flashing for a moment with a 
default font.

fixed a bug where, in preview pane mode, messages with attachments wouldn't
get their themes set correctly.

made it so selecting or scrolling in a messagepanel will remove the
new message icon.

optimized IMAP folder loading so that we initially fetch the SEEN flag,
and then pre-fetch the messages we'll actually display (by loading around
the getFirstUnreadMessage() value)

fixed notifyNewMessagesMain and Node so that they actually work.

added a button for using custom headers on an outgoing mail message.

fixed editor display of boolean properties in Folder editor.

worked around a sun bug in jdk1.4 which would result in the 
FolderSelectorPane being empty the first time it was brought up.

updated printing to use the new jdk 1.4 printing system.  also made 
printing, err, work correctly now.

added Bounce Message command, plus a BounceMessage filter.

modified the sendMessageList of the NewMessageInfo to use a sendMessageMap
instead.

added a configurable spam button.

changed the default action of the FolderSelectorPane to be only subscribed
folders.  this also fixes an exception you could get when trying to edit
filters while disconnected from an IMAP server.

040128 release
--------------

added support for S/MIME and OpenPGP encryption.

fixed a bug in which the new message notification didn't appear immediately
on the FolderNode.
